--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -52,6 +52,7 @@
     var ANC_NUMBER = "<lookup expression="fn.latestObs(163530).getValueText()"/>";
     var GREENCARD_VELOCITY = "<lookup expression="kenyaemr.GreenCardVelocityCalculation()" />";
     var PATIENT_ON_ART = GREENCARD_VELOCITY.split(",")[3].split(":")[1];
+    var REGIMEN_NAME = GREENCARD_VELOCITY.split(",")[5].split(":")[1];
     //Start on ready
 	jq(function () {
         jq('#anc-counselling').hide();
@@ -423,16 +424,12 @@
         if(encDate == null) {
             encDate = new Date();
         }
-        jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/durationSinceStartArt.action', { patientId: patientId, now: encDate })
-            .done(function(data) {
-                var msg = data.duration ? data.duration : 'Not started';
-                jq('#calculated-duration-start-art').html(msg);
-            });
-        jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/currentArvRegimen.action', { patientId: patientId, now: encDate })
-            .done(function(data) {
-                var msg = data.duration ? (data.regimen ) : 'None';
-                jq('#calculated-duration-current-regimen').html(msg);
-            });
+
+        if(PATIENT_ON_ART =="true") {
+            jq('#current-regimen').html(REGIMEN_NAME);
+        }else{
+            jq('#current-regimen').html("None");
+        }
     }
     //Clear hidden sections
     clearHiddenSections = function(parentObj) {
@@ -679,7 +676,7 @@
 										<input type="text" name="on-art" id="on-art" readonly="True" />
 										&#160;&#160;&#160;&#160;
 										Regimen:
-										<span id="calculated-duration-current-regimen" class="value"></span>
+										<span id="current-regimen" class="value"></span>
 										<br/>
 									</td>
 								</tr>
