--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
@@ -37,6 +37,7 @@
         //var HAART_START_DATE = "<lookup expression="fn.latestObs(163784).getValueDatetime()"/>";
         var GREENCARD_VELOCITY = "<lookup expression="kenyaemr.GreenCardVelocityCalculation()" />";
         var PATIENT_ON_ART = GREENCARD_VELOCITY.split(",")[3].split(":")[1];
+        var REGIMEN_NAME = GREENCARD_VELOCITY.split(",")[5].split(":")[1];
 		//On ready start
         jq(document).ready(function () {
             onEncounterDateChange();
@@ -373,16 +374,11 @@
             if(encDate == null) {
                 encDate = new Date();
             }
-            jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/durationSinceStartArt.action', { patientId: patientId, now: encDate })
-                .done(function(data) {
-                    var msg = data.duration ? data.duration : 'Not started';
-                    jq('#calculated-duration-start-art').html(msg);
-                });
-            jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/currentArvRegimen.action', { patientId: patientId, now: encDate })
-                .done(function(data) {
-                    var msg = data.duration ? (data.regimen ) : 'None';
-                    jq('#calculated-duration-current-regimen').html(msg);
-                });
+            if(PATIENT_ON_ART =="true") {
+                jq('#current-regimen').html(REGIMEN_NAME);
+            }else{
+                jq('#current-regimen').html("None");
+            }
         }
         //Clear hidden sections
         clearHiddenSections = function(parentObj) {
@@ -810,7 +806,7 @@
 												<input type="text" name="on-art" id="on-art" readonly="True" />
 												&#160;&#160;&#160;&#160;
 												Regimen:
-												<span id="calculated-duration-current-regimen" class="value"></span>
+												<span id="current-regimen" class="value"></span>
 												<br/>
 											</td>
 										</tr>
