--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -45,6 +45,7 @@
 
     var GREENCARD_VELOCITY = "<lookup expression="kenyaemr.GreenCardVelocityCalculation()" />";
     var PATIENT_ON_ART = GREENCARD_VELOCITY.split(",")[3].split(":")[1];
+    var REGIMEN_NAME = GREENCARD_VELOCITY.split(",")[5].split(":")[1];
 
 //Start on ready
 	jq(function () {
@@ -280,16 +281,11 @@
         if(encDate == null) {
             encDate = new Date();
         }
-        jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/durationSinceStartArt.action', { patientId: patientId, now: encDate })
-            .done(function(data) {
-                var msg = data.duration ? data.duration : 'Not started';
-                jq('#calculated-duration-start-art').html(msg);
-            });
-        jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/currentArvRegimen.action', { patientId: patientId, now: encDate })
-            .done(function(data) {
-                var msg = data.duration ? (data.regimen ) : 'None';
-                jq('#calculated-duration-current-regimen').html(msg);
-            });
+        if(PATIENT_ON_ART =="true") {
+            jq('#current-regimen').html(REGIMEN_NAME);
+        }else{
+            jq('#current-regimen').html("None");
+        }
     }
     beforeSubmit.push(function () {
         if (validateRequiredFields() &amp;&amp; validateOtherFields()) {
@@ -466,7 +462,7 @@
 											<input type="text" name="on-art" id="on-art" readonly="True" />
 											&#160;&#160;&#160;&#160;
 											Regimen:
-											<span id="calculated-duration-current-regimen" class="value"></span>
+											<span id="current-regimen" class="value"></span>
 											<br/>
 										</td>
 								</table>
