--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -50,6 +50,7 @@
 
     var GREENCARD_VELOCITY = "<lookup expression="kenyaemr.GreenCardVelocityCalculation()" />";
     var PATIENT_ON_ART = GREENCARD_VELOCITY.split(",")[3].split(":")[1];
+    var REGIMEN_NAME = GREENCARD_VELOCITY.split(",")[5].split(":")[1];
     //On ready start
     jq(function () {
         var strtext = "";
@@ -456,16 +457,11 @@
         if(encDate == null) {
             encDate = new Date();
         }
-        jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/durationSinceStartArt.action', { patientId: patientId, now: encDate })
-            .done(function(data) {
-                var msg = data.duration ? data.duration : 'Not started';
-                jq('#calculated-duration-start-art').html(msg);
-            });
-        jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/currentArvRegimen.action', { patientId: patientId, now: encDate })
-            .done(function(data) {
-                var msg = data.duration ? (data.regimen ) : 'None';
-                jq('#calculated-duration-current-regimen').html(msg);
-            });
+        if(PATIENT_ON_ART =="true") {
+            jq('#current-regimen').html(REGIMEN_NAME);
+        }else{
+            jq('#current-regimen').html("None");
+        }
     }
     //Clear hidden sections
     clearHiddenSections = function(parentObj) {
@@ -913,7 +909,7 @@
 										<input type="text" name="on-art" id="on-art" readonly="True" />
 										&#160;&#160;&#160;&#160;
 										Regimen:
-										<span id="calculated-duration-current-regimen" class="value"></span>
+										<span id="current-regimen" class="value"></span>
 										<br/>
 									</td>
 								</tr>
